<resources>
    <string name="app_name">FanFood</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginMenue">Login</string>
    <string name="lavel_intro">Intro</string>
    <string name="lavel_signin">Sign In</string>
    <string name="lavel_signup">Sign Up</string>
    <string name="lavel_payment">Payment</string>
    <string name="lavel_getstart">FANFOOD</string>
    <string name="lavel_concessions">SELECT CONCESSIONS</string>
    <string name="lavel_foodcatagory">FANFOOD</string>
    <string name="lavel_selectmenue">FANFOOD</string>
    <string name="lavel_Receipt">FANFOOD</string>
    <string name="lavel_Basket">FANFOOD</string>
    <string name="btn_txt_intro_signin">SIGN IN</string>
    <string name="btn_txt_intro_register">REGISTER</string>
    <string name="btn_txt_intro_getstart">GET STARTED</string>
    <string name="btn_txt_signin_createnew">CREATE NEW PROFILE</string>
    <string name="txt_signin_passwd">Password</string>
    <string name="txt_signin_email">Email</string>
    <string name="btn_txt_lofin">SUBMIT</string>
    <string name="btn_txt_signin_forgetpass">Forget?</string>
    <string name="show_signin_msg_email">Please enter valid email address</string>
    <string name="show_signin_msg_pass">Password required</string>
    <string name="menu_item1_signup">SIGN UP</string>
    <string name="menu_item1_getstart">GET START</string>
    <string name="txt_signup">SIGN UP</string>
    <string name="btn_txt_signup">SIGN UP</string>
    <string name="txt_signup_fname">First Name*</string>
    <string name="txt_signup_lname">Last Name*</string>
    <string name="txt_signup_email">Email*</string>
    <string name="txt_signup_phnumber">Phone Number*</string>
    <string name="txt_signup_passwd">Password</string>
    <string name="txt_signup_passwd1">Password</string>
    <string name="txt_signup_passwd2">Confirm password</string>
    <string name="txt_signup_or">OR</string>
    <string name="show_signup_msg_fname">First name required</string>
    <string name="show_signup_msg_lname">Last name required</string>
    <string name="show_signup_msg_email">Valid email address required</string>
    <string name="show_signup_msg_phn">Phone number required</string>
    <string name="show_signup_msg_pass">Password required minimum six character</string>
    <string name="show_signup_msg_conpass">Confirm password required</string>
    <string name="show_signup_msg_con_pass">Confirm password not matched</string>
    <string name="fdctlog_top_title">FOOD CATALOG</string>
    <string name="fdctroy_bottomTitl">Concession Name</string>
    <string-array name="drawer_titles">
        <item><b>About Fan Food</b></item>
        <item><b>Account</b></item>
        <item><b>Select Venue</b></item>
        <item><d>Order History</d></item>
        <item><b>Notification</b></item>
        <item><b>FAQ</b></item>
        <item><b>Favourite</b></item>
        <item><b>Rating</b></item>
        <item><b>Logout</b></item>
    </string-array>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="itmDtl_btnTxt">ADD TO CART</string>
    <string name="itmDtl_tutl_itmName">Item name</string>
    <string name="itmDtl_tutl_itmPrice">$0.00</string>
    <string name="itmDtl_tutl_itmQuantity">Quantity</string>
    <string name="itmDtl_tutl_instruction">Add Special item instruction</string>
    <string name="itmDtl_tutl_WriteDetails">Write Details</string>
    <string name="txt_payment">Payment</string>
    <string name="txt_payment_hint_cardNo">Credit card No.*</string>
    <string name="txt_payment_hint_mm">MM</string>
    <string name="txt_payment_hint_yy">YY</string>
    <string name="txt_payment_hint_cvv">CVV</string>
    <string name="txt_payment_hint_country">Country</string>
    <string name="btn_txt_payment_register">Register</string>
    <string name="payment_btn_id_register">Register</string>
    <string name="passwdRecover_signin_email">Email</string>
    <string name="passwdRecover_valiedCode">Verification code</string>
    <string name="passwdRecover_verificatrion_code">Please enter verification code</string>
    <string name="passwdRecover_conpass">Confirm password</string>
</resources>