<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroun_a"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/signup_txt_id_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/txt_signup_marginTop"
        android:text="@string/txt_signup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/actionbar_backgrounf"
        android:textSize="@dimen/txt_signup_siz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/signup_scrollView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/signup_from_paddingLeft"
                android:paddingRight="@dimen/signup_from_paddingRight" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/signup_txt_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_fname"
                        android:inputType="textPersonName|textCapSentences"
                        android:lines="1"

                        android:maxLength="18"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" >
                    </EditText>

                    <EditText
                        android:id="@+id/signup_txt_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_lname"
                        android:inputType="textPersonName|textCapSentences"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <EditText
                        android:id="@+id/signup_txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <EditText
                        android:id="@+id/signup_txt_phonenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_phnumber"
                        android:inputType="number"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <EditText
                        android:id="@+id/signup_txt_passwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_passwd"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <EditText
                        android:id="@+id/signup_txt_passwd_con"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_passwd2"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="1dp"
                                android:layout_weight="0.4"
                                android:background="@color/actionbar_backgrounf"
                                android:gravity="center_vertical"
                                android:orientation="vertical" >
                            </LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:gravity="center"
                                android:text="@string/txt_signup_or"
                                android:textSize="@dimen/txt_or_six" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="1dp"
                                android:layout_weight="0.4"
                                android:background="@color/actionbar_backgrounf"
                                android:gravity="center_vertical"
                                android:orientation="vertical" >
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal" >

                            <ImageView
                                android:id="@+id/signup_img_imageView1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="2dp"
                                android:layout_weight="0.5"

                                android:src="@drawable/img_signup_facebook" />

                            <ImageView
                                android:id="@+id/signup_img_imageView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:layout_weight="0.5"
                                android:src="@drawable/img_signup_google" />
                        </LinearLayout>
                    </LinearLayout>

                    <EditText
                        android:visibility="gone"
                        android:id="@+id/signup_txt_passwd2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_passwd1"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <EditText
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/editTxt_input_margin_top"
                        android:background="@drawable/edittxt_default_bg"
                        android:hint="@string/txt_signup_passwd2"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="@dimen/activity_input_pading"
                        android:textSize="@dimen/editTxt_default_six" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/signup_btn_id_signup"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/btn_default"
                            android:shadowColor="@color/btn_b_textshadow_default"
                            android:shadowDx="1.5"
                            android:shadowDy="1.5"
                            android:shadowRadius="3"
                            android:text="@string/btn_txt_signup"
                            android:textColor="@color/btn_txt_color_default" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>